# OLV-Plugins

asr/: asr_engine_interface.py  asr_server.py
asr/sherpa_onnx_asr_cpu_plugin/: __init__.py  plugin.json  pyproject.toml
asr/sherpa_onnx_asr_cpu_plugin/src/sherpa_onnx_asr_cpu_plugin/: __init__.py  engine.py  server.py
tts/: __init__.py  tts_engine_interface.py  tts_server.py
tts/fish_audio_tts_plugin/: README.md  plugin.json  pyproject.toml
tts/fish_audio_tts_plugin/src/fish_audio_tts_plugin/: __init__.py  engine.py  server.py
